--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Black Coin DApp</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 </head>
 <body>
-  <h1>Black Coin Staking</h1>
-  <button id="connect">Connect Wallet</button>
-  <p id="walletAddress"></p>
+  <div class="container">
+    <h1>Black Coin Wallet</h1>
+    <button id="connectBtn">Connect Wallet</button>
+    <p id="walletAddress"></p>
 
-  <input type="text" id="stakeAmount" placeholder="Amount to stake">
-  <button id="stake">Stake</button>
-  <button id="unstake">Unstake</button>
-  <button id="claim">Claim Rewards</button>
+    <h2>🎁 Claim Free Griots</h2>
+    <button id="claimBtn">Claim Now</button>
+    <p id="claimStatus"></p>
+  </div>
 
-  <p id="status"></p>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
